Regression: Reverse curve sometimes change the shape of input curve #100768

Closed
opened 2022-09-02 05:46:33 +02:00 by Zhen Dai · 9 comments

System Information
Operating system: macOS-12.5.1-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics OpenGL Engine Intel Inc. 4.1 INTEL-18.8.4

Blender Version
Broken: version: 3.3.0 Release Candidate, branch: master, commit date: 2022-08-31 16:43, hash: cdc0be48c9
Caused by 298d8a7b4a

Short description of error

Screen Shot 2022-09-02 at 11.41.00.png

Screen Shot 2022-09-02 at 11.40.55.png

I hope this is not by design...

Exact steps for others to reproduce the error

  • Download attached file and toggle the Reverse Curve node.

reverse-curve.blend

**System Information** Operating system: macOS-12.5.1-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics OpenGL Engine Intel Inc. 4.1 INTEL-18.8.4 **Blender Version** Broken: version: 3.3.0 Release Candidate, branch: master, commit date: 2022-08-31 16:43, hash: `cdc0be48c9` Caused by 298d8a7b4a **Short description of error** ![Screen Shot 2022-09-02 at 11.41.00.png](https://archive.blender.org/developer/F13449706/Screen_Shot_2022-09-02_at_11.41.00.png) ![Screen Shot 2022-09-02 at 11.40.55.png](https://archive.blender.org/developer/F13449705/Screen_Shot_2022-09-02_at_11.40.55.png) I hope this is not by design... **Exact steps for others to reproduce the error** - Download attached file and toggle the Reverse Curve node. [reverse-curve.blend](https://archive.blender.org/developer/F13449717/reverse-curve.blend)
Author

Added subscriber: @Zhen-Dai

Added subscriber: @Zhen-Dai
Member

Added subscribers: @lichtwerk, @PratikPB2123

Added subscribers: @lichtwerk, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm. According to manual spline shapes are not expected to get changed :
This is a regression introduced between 3.1 and 3.2
@lichtwerk , can you bisect? I'm away for next few hours.

I can confirm. According to manual spline shapes are not expected to [get changed ](https://docs.blender.org/manual/en/latest/modeling/geometry_nodes/curve/reverse_curve.html#:~:text=The%20Reverse%20Curve%20node%20swaps%20the%20start%20and%20end%20of%20splines.%20The%20shape%20of%20the%20splines%20is%20not%20changed.): This is a regression introduced between 3.1 and 3.2 @lichtwerk , can you bisect? I'm away for next few hours.
Pratik Borhade changed title from Reverse curve sometimes change the shape of input curve to Regression: Reverse curve sometimes change the shape of input curve 2022-09-02 06:10:42 +02:00
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Caused by 298d8a7b4a

@HooglyBoogly : mind checking?

Caused by 298d8a7b4a @HooglyBoogly : mind checking?
Philipp Oeser self-assigned this 2022-09-02 12:33:50 +02:00
Member

Note this goes wrong for the middle point (if we have an odd number of points).
Think I have the idea for a fix, will check

Note this goes wrong for the middle point (if we have an odd number of points). Think I have the idea for a fix, will check

This issue was referenced by 28d8076a2e

This issue was referenced by 28d8076a2e4e98002a3d455930b13366947e71ee
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100768
No description provided.