Fix T100768: Reverse curves skips handles of middle Bezier points

Reversing Bezier handle types and positions would skip the middle point
of curves with an odd number of segments, which is still necessary to
swap in order to avoid changing the curve's shape.